# DRFiles

./: docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  redis.conf
config/: authentication.py  exceptions.py  settings.py  urls.py
frontend/: package-lock.json
static/: config.js  index.html
storage/: models.py  serializers.py  signals.py  urls.py  views.py
storage/migrations/: 0001_initial.py  0002_alter_folder_name.py  0003_alter_folder_full_path.py
storage/services/: delete_service.py  download_service.py  main_service.py  minio_service.py  move_service.py  path_utils.py  repository.py  storage_service.py  upload_service.py  utils.py
storage/spectacular/: delete_params.py  directory_params.py  download_params.py  move_params.py  search_params.py  upload_params.py  upload_schemas.py
storage/views/: directory_view.py  download_view.py  move_view.py  resource_view.py  search_view.py
tests/: conftest.py  factory.py  test_auth.py  test_create.py  test_create_upload.py  test_delete.py  test_download.py  test_get.py  test_move.py  test_search.py  urls.py
users/: serializers.py  urls.py  views.py
