[project]
name = "drfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.46",
    "botocore>=1.43.46",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-redis>=7.0.0",
    "django-test-plus>=2.4.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "testcontainers[postgres]>=4.14.2",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests"]
python_files = ["test_*.py", "tests.py"]
